# cryptoPAN-rs

./: .editorconfig  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-audit.yml  rust-clippy.yml  rust-fmt.yml  tagged-release.yml
src/: anonymize.rs  lib.rs  scramble.rs
src/backends/: mod.rs  openssl.rs
